[package]
name = "ch1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version="0.29.0", features = ["bundled"]}
serde = "1.0"
actix-web = "4.0"
dotenv = "0.15"
log = "0.4"
log4rs = "1.0"

[dependencies.sqlx]
version = "0.5"
features = [
    "postgres",
    "runtime-actix-rustls"
]
